fixing wrap on meme share

--- a/app/assets/stylesheets/less/meme.less
+++ b/app/assets/stylesheets/less/meme.less
@@ -193,7 +193,7 @@
 		}
 	}
 	.sharea {
-		@width: 232px;
+		@width: 234px;
 		clear: left;
 		width: @width;
 		height: 140px;
